sfdx-source/isvte_falcon/main/default/objects/Account/fields/DW_Email__c.field-meta.xml
<CustomField>
    <fullName>DW_Email__c</fullName>
    <label>DW Email</label>
    <type>Email</type>
</CustomField>