sfdx-source/isvte_falcon/main/default/objects/Account/fields/DW_Password__c.field-meta.xml
<CustomField>
    <fullName>DW_Password__c</fullName>
    <description>DriveWealth Password</description>
    <inlineHelpText>DriveWealth Password</inlineHelpText>
    <label>DW Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>