sfdx-source/isvte_falcon/main/default/objects/Account/fields/DW_Total_Practice_Accounts__c.field-meta.xml
<CustomField>
    <fullName>DW_Total_Practice_Accounts__c</fullName>
    <label>DW Total Practice Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>