sfdx-source/isvte_falcon/main/default/objects/Account/fields/DW_User_ID__c.field-meta.xml
<CustomField>
    <fullName>DW_User_ID__c</fullName>
    <description>DriveWealth User ID</description>
    <externalId>true</externalId>
    <inlineHelpText>DriveWealth User ID</inlineHelpText>
    <label>DW User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>