sfdx-source/isvte_falcon/main/default/objects/Account/fields/DW_Username__c.field-meta.xml
<CustomField>
    <fullName>DW_Username__c</fullName>
    <description>DriveWealth Username</description>
    <inlineHelpText>DriveWealth Username</inlineHelpText>
    <label>DW Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>